@@ -1,9 +1,14 @@
+2004-01-29 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b15
+
+	* Bugfix: Added GALLERY_BASEDIR for inclusion of frame files.
+
 2004-01-29  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b14
 
 	* Added pretty nasty hack to reload the album page in Mini applet
 	  mode after upload completes (this relies on add_photos_frame.php
 	  and add_photos_refresh.php; if anyone has a better way of
 	  executing JavaScript from Java, I'd like to know).
+
 	* Added cookie so that add_photos opens on same tab the user
 	  selected last time he used add_photos.
 
